<resources>
    <string name="app_name">Github User</string>
    <string name="user_image">User Image</string>
    <string name="company">Company</string>
    <string name="icon_company">Icon Company</string>
    <string name="location">Location</string>
    <string name="icon_location">Icon location</string>
    <string name="amit_shekhar">Amit Shekhar</string>
    <string name="amitshekhariitbhu">amitshekhariitbhu</string>
    <string name="image_user">Image User</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="_60">60</string>
    <string name="_40">40</string>
    <string name="_30">30</string>
    <string name="username">Username</string>
    <string name="icon_detail">icon detail</string>
    <string name="repository">Repository</string>
    <string name="button_back">button back</string>
    <string name="bottom_image">Bottom image</string>
    <string name="top_image">top image</string>
    <string name="github_image">Github Image</string>
    <string name="kamis_12_03_2021">kamis, 12 - 03 - 2021</string>
    <string name="user">user</string>
    <string name="image_not_found">image not found</string>
    <string name="user_not_found">User Not Found</string>
    <string name="search_result_will_display_here">Search result will display here</string>
    <string name="has_no_followers">Has no Followers</string>
    <string name="list_followers_will_display_here">List Followers will display here</string>
    <string name="has_no_following">Has No Following</string>
    <string name="list_following_will_display_here">List Following Will Display here</string>
    <string name="language_icon">language icon</string>

</resources>