<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.FollowersFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user_followers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        tools:listitem="@layout/follow_list" />

    <ImageView
        android:id="@+id/image_not_Found"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/follow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintVertical_bias="0.25"
        android:contentDescription="@string/image_not_found" />

    <TextView
        android:id="@+id/text_not_found1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/has_no_followers"
        android:textColor="#FBD398"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_not_Found" />

    <TextView
        android:id="@+id/text_not_found2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_followers_will_display_here"
        android:textColor="#FBD398"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/text_not_found1" />

    <ProgressBar
        android:id="@+id/progress_bar_followers"
        android:layout_width="92dp"
        android:layout_height="93dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>